// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should setup correctly 1`] = `
Runtime {
  "expressions": Object {
    "0": "first",
    "3": "second",
  },
  "snapshots": Object {
    "0": "string",
    "3": "Expected 0 arguments, but got 1.",
  },
}
`;

exports[`should setup correctly with specified tsconfig 1`] = `
Runtime {
  "expressions": Object {
    "0": "first",
    "3": "second",
  },
  "snapshots": Object {
    "0": "string | undefined",
    "3": "Expected 0 arguments, but got 1.",
  },
}
`;
